apps/backend/base/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: bmo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: backend
          image: bmodemoacr.azurecr.io/backendapp:v2.1.3 # {"$imagepolicy": "flux-system:backend-policy"}
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /status
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /status
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: bmo
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80 # ClusterIP service port
      targetPort: 5000
  type: ClusterIP
