apps/backend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
spec:
  rules:
  - host: backend.local
    http:
      paths:
      - path: /status
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /compute
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /stress
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
